# 2sem_labs

lab2_proh/lab2_lib/: arraySequence.h  deque.h  dynamicarray.h  lab2_lib.pro  linkedList.h  linkedListSequence.h  main.cpp  queue.h  sequence.h  stack.h
lab2_proh/lab2_test/: lab2_test.pro  main.cpp  tst_arraysequencetest.cpp  tst_arraysequencetest.h  tst_dequetest.cpp  tst_dequetest.h  tst_linkedlistsequencetest.cpp  tst_linkedlistsequencetest.h
lab2_proh/lab2_ui/: interractiveInput.h  lab2_ui.pro  main.cpp  menu.h  person.cpp  person.h
lab3/lab3/: BinaryHeap.hpp  BinaryHeapMenu.cpp  BinaryTree.hpp  BinaryTreeMenu.cpp  Many.txt  ManyTest.txt  ManyTest_.txt  Menu.cpp  Menu.hpp  TreeTest.cpp  lab3  main.cpp  makefile
lab3/lab3-master/: BinHeap.cpp  BinHeap.hpp  BinTree.cpp  BinTree.hpp  BinaryHeap.hpp  BinaryTree.hpp  CMakeLists.txt  Menu.cpp  Menu.hpp  Set.hpp  SetTest.cpp  SetTest.hpp  lab3  lab3.cpp
lab3/lab3new/: binaryHeapMenu.cpp  binaryHeapMenu.hpp  binaryTree.hpp  binaryTreeMenu.cpp  binaryTreeMenu.hpp  lab3  main.cpp  menu.cpp  menu.hpp  sewTree.hpp
lab3/test/: main.cpp  test1.hpp
melab2/: ArraySequence.hpp  DynamicArray.hpp  LinkedList.hpp  ListSequence.hpp  Sequence.hpp  firstTask.cpp  firstTask.hpp  lab2  main.cpp  makefile  secondTask.cpp  secondTask.hpp
test/: a.out  main.cpp
